Safari button blurry on hover fix

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -35,6 +35,7 @@ button {
 				position: absolute;
 				left: 0;
 				top: 0;
+				backface-visibility: hidden;
 				transform: translateZ(0);
 				transform-origin: left top;
 				transition: transform 0.3s;
@@ -48,6 +49,7 @@ button {
 				position: absolute;
 				left: 0;
 				bottom: 0;
+				backface-visibility: hidden;
 				transform: translateZ(0);
 				transform-origin: left bottom;
 				transition: transform 0.3s;
@@ -63,6 +65,7 @@ button {
 				position: absolute;
 				right: 0;
 				top: 0;
+				backface-visibility: hidden;
 				transform: translateZ(0);
 				transform-origin: right top;
 				transition: transform 0.3s;
@@ -76,6 +79,7 @@ button {
 				position: absolute;
 				right: 0;
 				bottom: 0;
+				backface-visibility: hidden;
 				transform: translateZ(0);
 				transform-origin: right bottom;
 				transition: transform 0.3s;
